Added initial code to instantiate a sub-module.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "chokidar 'src/**/*.elm' -c 'elm make src/Main.elm --output dest/bundle.js'"
+    "watch": "chokidar 'src/**/*.elm' -c 'elm make src/**/*.elm --output dest/bundle.js'"
   },
   "author": "",
   "license": "ISC",
